--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   google_sign_in: ^4.4.2
   firebase_auth: ^0.16.0
+  location: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
